// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageMetadata renders title, description 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
  meta={
    Array [
      Object {
        "content": "My Page",
        "name": "twitter:title",
      },
      Object {
        "content": "My description",
        "name": "description",
      },
      Object {
        "content": "My description",
        "name": "twitter:description",
      },
    ]
  }
  title="My Page"
>
  <meta
    content="My Page"
    property="og:title"
  />
  <meta
    content="My description"
    property="og:description"
  />
</HelmetWrapper>
`;

exports[`PageMetadata renders title, description, image 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
  meta={
    Array [
      Object {
        "content": "My Page",
        "name": "twitter:title",
      },
      Object {
        "content": "My description",
        "name": "description",
      },
      Object {
        "content": "My description",
        "name": "twitter:description",
      },
      Object {
        "content": "http://www.bearer.sh/logo.png",
        "name": "twitter:image",
      },
    ]
  }
  title="My Page"
>
  <meta
    content="My Page"
    property="og:title"
  />
  <meta
    content="My description"
    property="og:description"
  />
  <meta
    content="http://www.bearer.sh/logo.png"
    property="og:image"
  />
</HelmetWrapper>
`;

exports[`PageMetadata renders when given only a title 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
  meta={
    Array [
      Object {
        "content": "My Page",
        "name": "twitter:title",
      },
    ]
  }
  title="My Page"
>
  <meta
    content="My Page"
    property="og:title"
  />
</HelmetWrapper>
`;
